--- a/less/buddypress.less
+++ b/less/buddypress.less
@@ -4,9 +4,14 @@
 
 #buddypress {
 	// Search bar
-	div.dir-search input[type="text"] {
-		padding:5px;
-		font-weight:normal;
+	div.dir-search {
+		position: absolute;
+		top:5px;
+		right:16px;
+		input[type="text"] {
+			padding:     5px;
+			font-weight: normal;
+		}
 	}
 
 	// Submit buttons
